signalling test with ui

--- a/raspberry/RaspBerry/client.UWP/MainPage.xaml
+++ b/raspberry/RaspBerry/client.UWP/MainPage.xaml
@@ -6,9 +6,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    Width="600">
 
     <Grid>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="300"/>
+        </Grid.ColumnDefinitions>
+        <Button Grid.Column="0" Content="Force switch" HorizontalAlignment="Center" VerticalAlignment="Center" Click="Force_Switch"/>
+        <Border Grid.Column="1" x:Name="border" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
     </Grid>
 </Page>
